@@ -10,23 +10,47 @@ elseif (UNIX)
     endif ()
 endif (WIN32 OR HAIKU)
 
+if (XMLRPC_DAEMON)
+    install (FILES cli-xmlrpc.pl DESTINATION ${BINDIR} RENAME ${PROJECT_NAME}
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-install (FILES cli.pl DESTINATION ${BINDIR} RENAME ${PROJECT_NAME}
-    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+    install (FILES cli-xmlrpc-config.pl DESTINATION ${CLIENT_DATA_DIR}/cli
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-install (FILES config.pl DESTINATION ${CLIENT_DATA_DIR}/cli
-    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-if (UNIX)
-  execute_process (
-                OUTPUT_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.1.gz
+    if (UNIX)
+        execute_process (
+                OUTPUT_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-xmlrpc.1.gz
                 COMMAND "${GZIP_CMD}" -9
-                INPUT_FILE ${PROJECT_NAME}.1
+                INPUT_FILE ${PROJECT_NAME}-xmlrpc.1
                 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/)
-endif (UNIX)
+    endif (UNIX)
 
-if (APPLE)
-  install (FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.1.gz DESTINATION ${PROJECT_NAME_GLOBAL}.app/man/man1)
-elseif (UNIX AND NOT APPLE)
-  install (FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.1.gz DESTINATION ${SHARE_DIR}/man/man1)
-endif (APPLE)
+    if (APPLE)
+        install (FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-xmlrpc.1.gz DESTINATION ${PROJECT_NAME_GLOBAL}.app/man/man1)
+    elseif (UNIX AND NOT APPLE)
+        install (FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-xmlrpc.1.gz DESTINATION ${SHARE_DIR}/man/man1)
+    endif (APPLE)
+endif ()
+
+if (JSONRPC_DAEMON)
+    install (FILES cli-jsonrpc.pl DESTINATION ${BINDIR} RENAME ${PROJECT_NAME}
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+
+    install (FILES cli-jsonrpc-config.pl DESTINATION ${CLIENT_DATA_DIR}/cli
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+
+    if (UNIX)
+        execute_process (
+                OUTPUT_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-jsonrpc.1.gz
+                COMMAND "${GZIP_CMD}" -9
+                INPUT_FILE ${PROJECT_NAME}-jsonrpc.1
+                WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/)
+    endif (UNIX)
+
+    if (APPLE)
+        install (FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-jsonrpc.1.gz DESTINATION ${PROJECT_NAME_GLOBAL}.app/man/man1)
+    elseif (UNIX AND NOT APPLE)
+        install (FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-jsonrpc.1.gz DESTINATION ${SHARE_DIR}/man/man1)
+    endif (APPLE)
+endif ()
+
