@@ -1,11 +1,11 @@
-.TH "eiskaltdcpp-cli" 1 "18 Sep 2011"
+.TH "eiskaltdcpp-cli-jsonrpc" 1 "21 Dec 2011"
 .SH "NAME"
 EiskaltDC++_CLI \- simple command line interface for EiskaltDC++ Daemon written on perl
 .SH "SYNOPSIS"
 .PP
-.B eiskaltdcpp-cli
+.B eiskaltdcpp-cli-jsonrpc
 .br
-.B eiskaltdcpp-cli
+.B eiskaltdcpp-cli-jsonrpc
 <Key>
 .SH "DESCRIPTION"
 .PP
@@ -15,7 +15,7 @@ To use this program you need first install few perl modules:
 .br
 sudo cpan Term::ShellUI
 .br
-sudo cpan RPC::XML
+sudo cpan RPC::JSON
 .SH "COMMAND LINE OPTIONS"
 .RB "A summary of options is included below."
 .TP
