@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<HTML><HEAD><TITLE>Man page of eiskaltdcpp-cli</TITLE>
+<HTML><HEAD><TITLE>Man page of eiskaltdcpp-cli-jsonrpc</TITLE>
 </HEAD><BODY>
-<H1>eiskaltdcpp-cli</H1>
-Section: User Commands  (1)<BR>Updated: 18 Sep 2011<BR><A HREF="#index">Index</A>
+<H1>eiskaltdcpp-cli-jsonrpc</H1>
+Section: User Commands  (1)<BR>Updated: 21 Dec 2011<BR><A HREF="#index">Index</A>
 <A HREF="/cgi-bin/man/man2html">Return to Main Contents</A><HR>
 
 <A NAME="lbAB">&nbsp;</A>
@@ -14,11 +14,11 @@ EiskaltDC++_CLI - simple command line interface for EiskaltDC++ Daemon written o
 
 <P>
 
-<B>eiskaltdcpp-cli</B>
+<B>eiskaltdcpp-cli-jsonrpc</B>
 
 <BR>
 
-<B>eiskaltdcpp-cli</B>
+<B>eiskaltdcpp-cli-jsonrpc</B>
 
 &lt;Key&gt;
 <A NAME="lbAD">&nbsp;</A>
@@ -35,7 +35,7 @@ To use this program you need first install few perl modules:
 sudo cpan Term::ShellUI
 <BR>
 
-sudo cpan RPC::XML
+sudo cpan RPC::JSON
 <A NAME="lbAE">&nbsp;</A>
 <H2>COMMAND LINE OPTIONS</H2>
 
@@ -104,6 +104,6 @@ This manual page was written by Boris Pek &lt;<A HREF="mailto:tehnick-8@mail.ru"
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 18:59:36 GMT, September 18, 2011
+Time: 23:12:31 GMT, December 20, 2011
 </BODY>
 </HTML>
