@@ -1,0 +1,109 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML><HEAD><TITLE>Man page of eiskaltdcpp-cli-xmlrpc</TITLE>
+</HEAD><BODY>
+<H1>eiskaltdcpp-cli-xmlrpc</H1>
+Section: User Commands  (1)<BR>Updated: 21 Dec 2011<BR><A HREF="#index">Index</A>
+<A HREF="/cgi-bin/man/man2html">Return to Main Contents</A><HR>
+
+<A NAME="lbAB">&nbsp;</A>
+<H2>NAME</H2>
+
+EiskaltDC++_CLI - simple command line interface for EiskaltDC++ Daemon written on perl
+<A NAME="lbAC">&nbsp;</A>
+<H2>SYNOPSIS</H2>
+
+<P>
+
+<B>eiskaltdcpp-cli-xmlrpc</B>
+
+<BR>
+
+<B>eiskaltdcpp-cli-xmlrpc</B>
+
+&lt;Key&gt;
+<A NAME="lbAD">&nbsp;</A>
+<H2>DESCRIPTION</H2>
+
+<P>
+
+<B>EiskaltDC++</B> is a cross-platform program that uses the Direct Connect and ADC protocol. It is compatible with other DC clients, such as the original DC from Neomodus, DC++ and derivatives. EiskaltDC++ also interoperates with all common DC hub software.
+<P>
+
+To use this program you need first install few perl modules:
+<BR>
+
+sudo cpan Term::ShellUI
+<BR>
+
+sudo cpan RPC::XML
+<A NAME="lbAE">&nbsp;</A>
+<H2>COMMAND LINE OPTIONS</H2>
+
+A summary of options is included below.
+
+<DL COMPACT>
+<DT><B>-h,  --help</B>
+
+<DD>
+Display help and exit
+<DT><B>-v,  --version</B>
+
+<DD>
+Show version information and exit
+</DL>
+<A NAME="lbAF">&nbsp;</A>
+<H2>FILES</H2>
+
+<DL COMPACT>
+<DT><B>~/.config/eiskaltdc++/ or $XDG_CONFIG_HOME/eiskaltdc++/</B>
+
+<DD>
+Directory with user configuration files and logs
+<DT><B>/usr/local/share/eiskaltdcpp/cli/ or /usr/share/eiskaltdcpp/cli/</B>
+
+<DD>
+Directory with default configuration file
+</DL>
+<A NAME="lbAG">&nbsp;</A>
+<H2>DOCUMENTATION</H2>
+
+<DL COMPACT>
+<DT>Actual README file you can always find here: <B><A HREF="https://raw.github.com/negativ/eiskaltdcpp/master/eiskaltdcpp-cli/README">https://raw.github.com/negativ/eiskaltdcpp/master/eiskaltdcpp-cli/README</A></B><DD>
+</DL>
+<A NAME="lbAH">&nbsp;</A>
+<H2>AUTHOR</H2>
+
+This program was written by Dmitry Kolosov &lt;<A HREF="mailto:onyx@z-up.ru">onyx@z-up.ru</A>&gt; and others (see file AUTHORS).
+<BR>
+
+EiskaltDC++ homepage: <B><A HREF="http://code.google.com/p/eiskaltdc/">http://code.google.com/p/eiskaltdc/</A></B>
+<A NAME="lbAI">&nbsp;</A>
+<H2>BUG REPORTS</H2>
+
+If you find a bug in EiskaltDC++ please report it here:
+<B><A HREF="http://code.google.com/p/eiskaltdc/issues/list">http://code.google.com/p/eiskaltdc/issues/list</A></B>
+
+<P>
+
+This manual page was written by Boris Pek &lt;<A HREF="mailto:tehnick-8@mail.ru">tehnick-8@mail.ru</A>&gt; for the Debian project (and may be used by others).
+<P>
+
+<HR>
+<A NAME="index">&nbsp;</A><H2>Index</H2>
+<DL>
+<DT><A HREF="#lbAB">NAME</A><DD>
+<DT><A HREF="#lbAC">SYNOPSIS</A><DD>
+<DT><A HREF="#lbAD">DESCRIPTION</A><DD>
+<DT><A HREF="#lbAE">COMMAND LINE OPTIONS</A><DD>
+<DT><A HREF="#lbAF">FILES</A><DD>
+<DT><A HREF="#lbAG">DOCUMENTATION</A><DD>
+<DT><A HREF="#lbAH">AUTHOR</A><DD>
+<DT><A HREF="#lbAI">BUG REPORTS</A><DD>
+</DL>
+<HR>
+This document was created by
+<A HREF="/cgi-bin/man/man2html">man2html</A>,
+using the manual pages.<BR>
+Time: 23:12:31 GMT, December 20, 2011
+</BODY>
+</HTML>
